    and todo items from the html shipped in it.
  * parentlinks: New plugin, split out of ikiwiki core and enabled by default,
    and several new fields added to allow for advanced styling. (intrigeri)
  * smileys: Some fixes for escaped smileys.
  * smileys: Note that smileys need to be double-escaped for the escaping to
    work. Markdown removes one level of escaping.

  [ Simon McVittie ]
  * meta, inline: Support guid options, to allow forcing a particular url or
    uuid in feeds.
  * meta: fix title() PageSpec
  * Some footer style changes.
  * aggregate: Add an `aggregateinternal` option, which allows storing
    aggregated data to internal-use files, rather than wiki pages. This
    can save disk space, and be faster.
  * ikiwiki-transition: Add a `aggregateinternal` transition to rename
    the aggregated files.

 -- Josh Triplett <josh@freedesktop.org>  Wed, 09 Jul 2008 21:30:33 -0700

ikiwiki (2.53) unstable; urgency=low

  * search: generate configuration files once only when rebuilding
    (Gabriel McManus)
  * attachment: Fix an uninitialised value warning when editing a page
    that currently has no attachments.
  * Fix a bug with links to pages whose names contained colons.
  * attachment: Support old versions of CGI.pm that lack an upload method.
  * Include ikiwiki.setup in examples in the debian package.
  * attachment: Support perl 5.8's buggy version of CGI.pm.
  * otl: Support utf-8 files. (Recai Oktaş)

 -- Joey Hess <joeyh@debian.org>  Wed, 09 Jul 2008 16:45:33 -0400

ikiwiki (2.52) unstable; urgency=low

  * attachment: New plugin for uploading and managing attachments.
    This includes a fairly powerful PageSpec based admin pref for deciding
    whether to accept a given upload, and an attachment management interface
    on the edit page.
    (Sponsored by The TOVA Company.)
  * If attachments are not enabled, configure CGI.pm to disable file
    uploads by default. (An anti-DOS measure.)