@@ -15,3 +15,5 @@ the problem, of course.
 Making the indexing only happen on a real commit might also speed the
 Preview up a small amount.
 --Chapman Flack
+
+[[tag done]]
